--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,4 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test
-        
+        run: npm run test -- --coverage
