--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Run tests
         run: npm run test -- --coverage
 
-  lint:
-    name: Lint
+  style:
+    name: style
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -40,4 +40,4 @@ jobs:
         run: npm ci
 
       - name: Run linter
-        run: npm run lint
+        run: npm run format:check
