--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         run: npm run format:check
 
       - name: lint check
-        run: npm run lint
+        run: npm run lint -- --max-warnings=0
